// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VehicleSelector — snapshots > karta man_solo jest zaznaczona — snapshot 1`] = `
<div>
  <section
    aria-label="Wybór pojazdu"
    class="vehicle-selector"
  >
    <h2
      class="vehicle-selector__heading"
    >
      Wybierz pojazd
    </h2>
    <div
      aria-label="Wybór pojazdu"
      class="vehicle-selector__grid"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-disabled="false"
        aria-label="Renault Master L2, max 6 przystanków"
        class="vehicle-selector__card"
        id="vehicle-card-master_l2"
        role="radio"
        tabindex="0"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          Renault Master L2
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 1.9090909090909092; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              6.4
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              3,5
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              6
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              18.5
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
      <button
        aria-checked="false"
        aria-disabled="false"
        aria-label="Renault Master L3, max 6 przystanków"
        class="vehicle-selector__card"
        id="vehicle-card-master_l3"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          Renault Master L3
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 2; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              7.2
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              3,6
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              6
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              18.5
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
      <button
        aria-checked="false"
        aria-disabled="false"
        aria-label="Renault Master L4, max 6 przystanków"
        class="vehicle-selector__card"
        id="vehicle-card-master_l4"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          Renault Master L4
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 2.2; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              8
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              3,8
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              6
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              19
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
      <button
        aria-checked="true"
        aria-disabled="false"
        aria-label="MAN Solówka, max 10 przystanków"
        class="vehicle-selector__card vehicle-selector__card--selected"
        id="vehicle-card-man_solo"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          MAN Solówka
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 3.63265306122449; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              17.6
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              24
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              10
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              28
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
    </div>
  </section>
</div>
`;

exports[`VehicleSelector — snapshots > karta master_l2 jest zaznaczona — snapshot 1`] = `
<div>
  <section
    aria-label="Wybór pojazdu"
    class="vehicle-selector"
  >
    <h2
      class="vehicle-selector__heading"
    >
      Wybierz pojazd
    </h2>
    <div
      aria-label="Wybór pojazdu"
      class="vehicle-selector__grid"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        aria-disabled="false"
        aria-label="Renault Master L2, max 6 przystanków"
        class="vehicle-selector__card vehicle-selector__card--selected"
        id="vehicle-card-master_l2"
        role="radio"
        tabindex="0"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          Renault Master L2
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 1.9090909090909092; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              6.4
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              3,5
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              6
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              18.5
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
      <button
        aria-checked="false"
        aria-disabled="false"
        aria-label="Renault Master L3, max 6 przystanków"
        class="vehicle-selector__card"
        id="vehicle-card-master_l3"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          Renault Master L3
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 2; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              7.2
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              3,6
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              6
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              18.5
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
      <button
        aria-checked="false"
        aria-disabled="false"
        aria-label="Renault Master L4, max 6 przystanków"
        class="vehicle-selector__card"
        id="vehicle-card-master_l4"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          Renault Master L4
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 2.2; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              8
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              3,8
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              6
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              19
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
      <button
        aria-checked="false"
        aria-disabled="false"
        aria-label="MAN Solówka, max 10 przystanków"
        class="vehicle-selector__card"
        id="vehicle-card-man_solo"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          MAN Solówka
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 3.63265306122449; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              17.6
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              24
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              10
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              28
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
    </div>
  </section>
</div>
`;

exports[`VehicleSelector — snapshots > renderuje 4 karty w domyślnym stanie 1`] = `
<div>
  <section
    aria-label="Wybór pojazdu"
    class="vehicle-selector"
  >
    <h2
      class="vehicle-selector__heading"
    >
      Wybierz pojazd
    </h2>
    <div
      aria-label="Wybór pojazdu"
      class="vehicle-selector__grid"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-disabled="false"
        aria-label="Renault Master L2, max 6 przystanków"
        class="vehicle-selector__card"
        id="vehicle-card-master_l2"
        role="radio"
        tabindex="0"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          Renault Master L2
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 1.9090909090909092; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              6.4
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              3,5
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              6
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              18.5
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
      <button
        aria-checked="false"
        aria-disabled="false"
        aria-label="Renault Master L3, max 6 przystanków"
        class="vehicle-selector__card"
        id="vehicle-card-master_l3"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          Renault Master L3
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 2; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              7.2
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              3,6
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              6
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              18.5
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
      <button
        aria-checked="false"
        aria-disabled="false"
        aria-label="Renault Master L4, max 6 przystanków"
        class="vehicle-selector__card"
        id="vehicle-card-master_l4"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          Renault Master L4
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 2.2; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              8
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              3,8
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              6
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              19
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
      <button
        aria-checked="false"
        aria-disabled="false"
        aria-label="MAN Solówka, max 10 przystanków"
        class="vehicle-selector__card"
        id="vehicle-card-man_solo"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="vehicle-selector__label"
        >
          MAN Solówka
        </span>
        <div
          class="vehicle-selector__thumb-wrapper"
        >
          <div
            aria-hidden="true"
            class="vehicle-selector__thumb"
            style="--trailer-ratio: 3.63265306122449; background: var(--color-trailer-bed);"
          />
        </div>
        <dl
          class="vehicle-selector__stats"
        >
          <div>
            <dt>
              Max LDM
            </dt>
            <dd>
              17.6
            </dd>
          </div>
          <div>
            <dt>
              Max tonaż
            </dt>
            <dd>
              24
               t
            </dd>
          </div>
          <div>
            <dt>
              Przystanki
            </dt>
            <dd>
              max 
              10
               przystanków
            </dd>
          </div>
          <div>
            <dt>
              Paliwo (baza)
            </dt>
            <dd>
              28
               l/100 km
            </dd>
          </div>
        </dl>
      </button>
    </div>
  </section>
</div>
`;
